<?xml version="1.0"?>
<package>
  <name>rmao_umd</name>
  <version>0.0.1</version>
  <description>ECE5542 ROS Lab Package by Ruiqi Mao</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rmao@umich.edu">Ruiqi Mao</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend> geometry_msgs</build_depend>
  <run_depend> geometry_msgs </run_depend>
  <build_depend> turtlesim </build_depend>
  <run_depend> turtlesim </run_depend>
  <build_depend> roscpp </build_depend>
  <run_depend> roscpp </run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
